Sammis bug squash (#176)
* issue #126: Map Card does not display correct user creator

* issue #110: limit number of characters in username

* Selected card page, title wrapping

* title limit on map card #109 also realigned title on edit screen

* map card description limit added

* page should reload/rerender duplicating a map #74

* Selected card screen displays formatted date

* when editing numeric turns into a string, as long as its not empty string then gucci

* updated colorswatch border radius, and deleted unused component

--- a/client/src/components/selectedcard/css/mapHeader.css
+++ b/client/src/components/selectedcard/css/mapHeader.css
@@ -6,6 +6,7 @@
 
 #title {
   text-align: left;
+  overflow-wrap: break-word;
 }
 
 #editIcon {
